--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>QTickets WebApp</title>
+    <!-- 1) Telegram WebApp SDK -->
+    <script src="https://telegram.org/js/telegram-web-app.js?57"></script>
     <style>
         html, body, #frame {
             margin: 0; padding: 0;
@@ -11,51 +13,59 @@
             overflow: hidden;
         }
     </style>
-    <script>
-        const tg = window.Telegram?.WebApp;
-        window.addEventListener('DOMContentLoaded', () => {
-            if (tg) tg.ready();
-
-            // 1) Получаем payload из ?startapp или initDataUnsafe
-            const payload = new URLSearchParams(location.search)
-                    .get('startapp')
-                || tg?.initDataUnsafe?.start_param
-                || '';
-            if (!payload) {
-                document.body.innerHTML = '<p style="color:red; text-align:center;">Нет startapp</p>';
-                return;
-            }
-
-            // 2) Разбиваем по '-' на куски
-            const segments = payload.split('-');
-            // 3) Первый сегмент — это eventId
-            const eventId = segments.shift();
-            if (!eventId) {
-                document.body.innerHTML = '<p style="color:red; text-align:center;">Нет event_id</p>';
-                return;
-            }
-
-            // 4) Остальные сегменты — в формате key=value
-            const params = new URLSearchParams();
-            segments.forEach(seg => {
-                const [key, value] = seg.split('=');
-                if (key && value != null) {
-                    params.set(key, value);
-                }
-            });
-
-            // 5) Строим URL для iframe
-            const qs = params.toString();
-            const src = `https://qtickets.ru/event/${encodeURIComponent(eventId)}/${ qs ? `?${qs}` : '' }`;
-
-            // 6) Вставляем iframe
-            const iframe = document.createElement('iframe');
-            iframe.id = 'frame';
-            iframe.src = src;
-            iframe.frameBorder = '0';
-            document.body.appendChild(iframe);
-        });
-    </script>
 </head>
-<body></body>
+<body>
+<script>
+    // 2) Получаем объект WebApp
+    const tg = window.Telegram?.WebApp;
+    // 3) Ждём готовности (даёт плавную интеграцию с UI Telegram)
+    tg?.ready();
+
+    // 4) Извлекаем строку start_param
+    //    – сначала пытаемся из initDataUnsafe (надёжнее, чем читать location.search напрямую)  [oai_citation:0‡Telegram](https://core.telegram.org/bots/webapps?utm_source=chatgpt.com)
+    //    – fallback: из query string (?startapp=...)
+    const startParam = tg?.initDataUnsafe?.start_param
+        || new URLSearchParams(location.search).get('startapp')
+        || '';
+
+    if (!startParam) {
+        document.body.innerHTML =
+            '<p style="color:red; text-align:center; margin-top:2rem;">Ошибка: не передан startapp</p>';
+        throw new Error('Missing startapp');
+    }
+
+    // 5) Разбор сегментов вида "key=value"
+    //    Первый сегмент – просто event_id (число или строка)
+    const segments = startParam.split('-');
+    const eventId  = segments.shift();
+    if (!eventId) {
+        document.body.innerHTML =
+            '<p style="color:red; text-align:center; margin-top:2rem;">Ошибка: нет event_id</p>';
+        throw new Error('Missing event_id');
+    }
+
+    // 6) Собираем остальные пары в объект
+    const params = new URLSearchParams();
+    segments.forEach(seg => {
+        const [key, ...rest] = seg.split('=');
+        const val = rest.join('=');
+        if (key && val !== undefined) {
+            params.set(key, val);
+        }
+    });
+
+    // 7) Строим URL для iframe
+    const qs  = params.toString(); // например: "utm_source=telegram&...&qcode=test"
+    const src = `https://qtickets.ru/event/${encodeURIComponent(eventId)}/${
+        qs ? '?' + qs : ''
+    }`;
+
+    // 8) Вставляем iframe
+    const iframe = document.createElement('iframe');
+    iframe.id = 'frame';
+    iframe.src = src;
+    iframe.frameBorder = '0';
+    document.body.appendChild(iframe);
+</script>
+</body>
 </html>
