--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             margin: 0; padding: 0;
             width: 100%; height: 100%;
             overflow: hidden;
+            background: white;
         }
     </style>
 </head>
@@ -27,8 +28,6 @@
     const startParam = tg?.initDataUnsafe?.start_param
         || new URLSearchParams(location.search).get('startapp')
         || '';
-
-    alert(startParam);
 
     if (!startParam) {
         document.body.innerHTML =
