--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         }
     });
 
+    alert(params.toString());
+
     // Финальный URL для iframe
     const finalUrl = `https://qtickets.ru/telegram-iframe?${params.toString()}${hash}`;
 
